[package]
name = "buckle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = [ "full" ] }
tonic = "*"
prost = "*"
clap = { version = "*", features = [ "derive" ] }
anyhow = "*"
fancy-duration = "*"
serde = { version = "*", features = [ "derive" ] }
serde_yaml_ng = "*"
tokio-stream = "*"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
tempfile = "*"
libc = "*"

# these are currently only used for testing
[features]
zfs = []
test = []
